added Task update proxy pass through and CompleteTask service
